--- a/Django/Dhruv/templates/contact.html
+++ b/Django/Dhruv/templates/contact.html
@@ -3,6 +3,9 @@
 {% block title %}Contact{% endblock title %}
 
 {% block body %}
-
+<div class="container-fluid px-0">
+<img src="http://source.unsplash.com/1200x400/?phone,contact" class="d-block w-100 mx-0" alt="...">
+</div>
+<h2 class="text-center">Contact Us</h2>
 {% endblock body %}
 
