--- a/Django/Dhruv/templates/about.html
+++ b/Django/Dhruv/templates/about.html
@@ -4,5 +4,9 @@
 
 {% block body %}
 
+<div class="col-12">
+    <img src="http://source.unsplash.com/1200x400/?motorbike"/>
+  </div>
+
 {% endblock body %}
 
