--- a/Django/Dhruv/templates/base.html
+++ b/Django/Dhruv/templates/base.html
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About us</a>
+                <a class="nav-link" href="{% url 'about' %}">About us</a>                            
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -39,6 +39,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign in</a>
               </li>
              
             </ul>
