--- a/Django/Dhruv/templates/base.html
+++ b/Django/Dhruv/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>{% block title %}{% endblock title %}| Dhruv IceCream Point</title>
+    <title>{% block title %}{% endblock title %}| Magnum IceCream </title>
   </head>
   <body>
     <!-- <nav class="navbar navbar-light bg-dark"> -->
@@ -43,10 +43,10 @@
                 <a class="navbar-brand" href="/contact">Contact us</a>
               </li>             
             </ul>
-            <form class="d-flex">
+            <!-- <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success mx-2" type="submit">Search</button>
-            </form>
+            </form> -->
             
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
@@ -56,7 +56,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="{% url 'tablebooking' %}">Table Booking</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
