--- a/Django/Dhruv/templates/index.html
+++ b/Django/Dhruv/templates/index.html
@@ -145,6 +145,19 @@
       </div>
     </div>
 
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="/home" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="services" class="nav-link px-2 text-muted">Services</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Table Booking</a></li>
+          <li class="nav-item"><a href="about" class="nav-link px-2 text-muted">About Us</a></li>
+          <li class="nav-item"><a href="contact" class="nav-link px-2 text-muted">Contact Us</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2018 Magnum IceCream, Inc</p>
+      </footer>
+    </div>
+
 
   </div>
 </div>
