--- a/Django/Dhruv/templates/base.html
+++ b/Django/Dhruv/templates/base.html
@@ -32,11 +32,11 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/services">Ice Cream</a></li>
-                  <li><a class="dropdown-item" href="#">Cold drinks</a></li>
+                  <li><a class="dropdown-item" href="{% url 'icecreams' %}">Ice Creams</a></li>
+                  <li><a class="dropdown-item" href="{% url 'colddrinks' %}">Cold drinks</a></li>
                   <li><hr class="dropdown-divider">
                 </li>
-                  <li><a class="dropdown-item" href="#">Family Pack</a></li>
+                  <li><a class="dropdown-item" href="{% url 'familypack' %}">Family Pack</a></li>
                 </ul>
               </li>
               <li class="nav-item">
