--- a/Django/Dhruv/templates/about.html
+++ b/Django/Dhruv/templates/about.html
@@ -52,6 +52,17 @@
 </head>
 <body class="text-center text-white bg-dark">
 
+  <div class="col-sm-6 col-lg-4 mb-4">
+    <div class="card">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+
+      <div class="card-body">
+        <h5 class="card-title">Card title that wraps to a new line</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+
   <!-- <a class="navbar-brand" href="#"><img itemprop="image" class="" alt="Magnum logo" src="https://www.magnumicecream.com/content/dam/unilever/magnum/united_states_of_america/logo/magnum-logo-2184163-png.png.ulenscale.100x35.png"></a> -->
   <div class="arrows-two wow slideInDown" data-wow-duration="1s" data-wow-delay=".5s"><img src="http://source.unsplash.com/1200x400/?icecreams" class="d-block w-100 mx-0" alt="..."></div>
 					<p class="wow slideInUp" data-wow-duration="1s" data-wow-delay=".3s">Lorem ipsum Nam libero tempore cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.Lorem Ipsum has been the industry's standard dummy text ever since.</p>
