--- a/Django/Dhruv/templates/index.html
+++ b/Django/Dhruv/templates/index.html
@@ -13,21 +13,21 @@
       <div class="carousel-item active">
         <img src="http://source.unsplash.com/1600x600/?icecreams" class="d-block w-100" alt="..."> 
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+          <h5>IceCreams</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="http://source.unsplash.com/1600x600/?browny" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
+          <h5>Browny</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="http://source.unsplash.com/1600x600/?soda" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
+          <h5>Colddrinks</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
@@ -52,7 +52,7 @@
         <img src="http://source.unsplash.com/1200x900/?Vanilla icecream" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Vanilla IceCream</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -68,7 +68,7 @@
         <img src="http://source.unsplash.com/1200x900/?Chocolate icecream" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Chocolate IceCream</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -84,7 +84,7 @@
         <img src="http://source.unsplash.com/1200x900/?Neapolitan icecream" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Neapolitan IceCream.</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -101,7 +101,7 @@
         <img src="http://source.unsplash.com/1200x900/?Chocolate Chip" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Chocolate Chip</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -117,7 +117,7 @@
         <img src="http://source.unsplash.com/1200x900/?Strawberry icecream" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Strawberry Icecream</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -133,7 +133,7 @@
         <img src="http://source.unsplash.com/1200x900/?Pistachio icecream" class="d-block w-100" alt="..."> 
 
         <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Pistachio Icecream</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
